--- a/index.html
+++ b/index.html
@@ -8,39 +8,64 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;600;700&display=swap" rel="stylesheet">
     <!-- Custom Stylesheet -->
     <link rel="stylesheet" href="styles.css">
+
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png" />
+
+    <style>
+        .attribution {
+            font-size: 11px;
+            text-align: center;
+        }
+
+        .attribution a {
+            color: hsl(228, 45%, 44%);
+        }
+    </style>
+
 
     <title>Single Price Grid Component</title>
 </head>
 
 <body>
+
     <div class="main-container">
-        <h1>Join our community</h1>
-        <div class="row">
-            <h2>30-day, hassle-free money back guarantee</h2>
-            <p>Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers
-                who are serious about honing their skills.</p>
+        <div class="upper-container">
+            <h2 class="main-heading">Join our community</h2>
+            <p class="slogan">30-day, hassle-free money back guarantee</p>
+            <p class="text-content">
+                Gain access to our full library of tutorials along with expert code
+                reviews. Perfect for any developers who are serious about honing their
+                skills.
+            </p>
         </div>
-        <div class="prices-row">
-            <!-- Left Column -->
-            <div class="col-1">
-                <h2>h1</h2>
+        <!-- Left Column -->
+        <div class="flex-container">
+            <div class="pricing-container">
+                <h3 class="title">Monthly Subscription</h3>
+                <p class="pricing"><span>&dollar;29</span> per month</p>
+                <p class="dollar">Full access for less than &dollar;1 a day</p>
+                <button class="signup">Sign Up</button>
             </div>
+
             <!-- Right Column -->
-            <div class="col-2">
-                <h2>h1</h2>
+            <div class="about">
+                <h3>Why Us</h3>
+                <p>
+                    Tutorials by industry experts<br />
+                    Peer &amp; expert code review<br />
+                    Coding exercises<br />
+                    Access to our GitHub repos<br />
+                    Community forum<br />
+                    Flashcard decks<br />
+                    New videos every week
+                </p>
             </div>
         </div>
     </div>
-    <!-- <footer>
-        <p class="attribution">
-            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-            Coded by <a href="#">Your Name Here</a>.
-        </p>
-    </footer> -->
+
 </body>
 
 </html>
